--- a/inventry/assets/style/stylesheet.css
+++ b/inventry/assets/style/stylesheet.css
@@ -14,6 +14,15 @@
     margin-bottom: 200px;
 }
 
+.container {
+    border:1px solid gray;
+    background-color: cyan;
+    border-radius: 6px;
+    width: 400px;
+    margin: 10px;
+    text-align: center;
+    margin-left: 50px;
+}
 .profilestyle {
     border: 1px solid gray;
     background-color: cyan;
