--- a/inventry/views/profile.html
+++ b/inventry/views/profile.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 
-<div class = "profilestyle" ng-init="userprofilepage()">
+<div class = "container" ng-init="userprofilepage()">
     <p>{{postivemessage}}</p>
     <p>{{errormessage}}</p>
     <h3>{{profilename}}</h3>
 
     <form name = "nameForm" >
-    <div>
-        <input type = "text"
-            placeholder = "Enter your name"
-            name = "name"
-            class = "formcontroll"
-            ng-minlength = "3"
-            ng-maxlength = "8"
-            ng-model = "name" autofocus disabled required>
-            <p ng-show = "nameForm.name.$error.required &&
+        <div>
+            <input type = "text"
+                   placeholder = "Enter your name"
+                   name = "name"
+                   class = "formcontroll"
+                   ng-model = "userdetails.name" autofocus disabled required>
+                <p ng-show = "nameForm.name.$error.required &&
                         nameForm.name.$dirty">Please enter your name</p><br><br>
             </div>
-    </form>
+        </form>
 
     <form name = "usernameForm">
         <div>
             <input type = "text"
-                placeholder = "Enter your user name"
-                class = "formcontroll"
-                name = "username"
-                ng-minlength = "3"
-                ng-maxlength = "8"
-                ng-model = "username" disabled required>
+                    placeholder = "Enter your user name"
+                    class = "formcontroll"
+                    name = "username"
+                    ng-model = "userdetails.username" disabled required>
                 <p ng-show = "usernameForm.username.$error.required &&
-                            usernameForm.username.$dirty">
-                            please enter your username</p><br><br>
+                        usernameForm.username.$dirty">
+                        please enter your username</p><br><br>
                </div>
            </form>
 
@@ -40,14 +36,14 @@
                    placeholder="Enter your EmailId"
                    name = "email"
                    class ="formcontroll"
-                   ng-model="mailid" disabled required/>
+                   ng-model="userdetails.mailid" disabled required/>
                    <p ng-show="validemail.email.$error.required
                    && validemail.email.$dirty">Please enter your email</p>
                    <p ng-show="!validemail.email.$error.required
                    && validemail.email.$error.email && validemail.email.$dirty">
                    Invalid email</p><br><br>
                </div>
-    </form>
+           </form>
 
     <form name = "passwordForm">
         <div>
@@ -55,10 +51,8 @@
                    placeholder = "Enter your password"
                    name = "password"
                    class = "formcontroll"
-                   ng-minlength = "8"
-                   ng-maxlength="20"
                    ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/"
-                   ng-model = "password" required/>
+                   ng-model = "userdetails.password" required/>
                    <p ng-show="passwordForm.password.$error.required
                    && passwordForm.password.$dirty">Please enter your password</p>
                    <p ng-show = "!passwordForm.password.$error.required &&
@@ -73,26 +67,25 @@
                             passwordForm.password.$dirty">
                             Must contain one lower &amp; uppercase letter,
                             and one non-alpha character </p><br><br>
-        </div>
-    </form>
+               </div>
+           </form>
 
         <div>
             <input type = "date"
                    placeholder = "Enter your date of birth"
                    class = "formcontroll"
-                   ng-model = "date" disabled><br><br>
+                   ng-model = "userdetails.date" disabled><br><br>
         </div>
 
     <form name = "addresForm">
         <div>
-            <textarea name="add" rows="8" cols="30"
+            <textarea name="add" rows="8" cols="20"
                       placeholder = "Enter your address"
                       name = "address"
                       class = "address"
-                      ng-minlength = "15"
-                      ng-model = "address" disabled required></textarea><br><br>
-        </div>
-    </form>
+                      ng-model = "userdetails.address" disabled required></textarea><br><br>
+                </div>
+            </form>
 
     <form name = "numberForm">
         <div>
@@ -102,15 +95,15 @@
                    name = "numbers"
                    ng-minlength = "10"
                    ng-maxlength = "10"
-                   ng-model="phonenumber" required/>
+                   ng-model="userdetails.phonenumber" required/>
                    <p ng-show = "numberForm.numbers.$error.required ||
                                numberForm.numbers.$error.number"></p>
                     <p ng-show = "((numberForm.numbers.$error.minlength ||
                                 numberForm.numbers.$error.maxlength) &&
                                 numberForm.numbers.$dirty)">
                                 Phone number should be 10 digits</p><br><br>
-        </div>
-    </form>
-        <button class = "buttons"  ng-click = "updatedetials()">Save</button>
+               </div>
+           </form>
+        <button class = "buttons" ng-click = "updatedetials()">Save</button>
         <button class = "buttons" ui-sref="home" >Cancel</button>
     </div>
