added new product detials and list

--- a/inventry/views/login.html
+++ b/inventry/views/login.html
@@ -1,5 +1,5 @@
 <body class = "images">
-    <div ng-controller = "login-controller" ngCookies>
+    <div ng-controller = "login-controller">
         <div class="login">
 
             <p>{{error}}</p>
