--- a/inventry/assets/style/stylesheet.css
+++ b/inventry/assets/style/stylesheet.css
@@ -1,7 +1,3 @@
-.images {
-    background-image: url("background.jpg");
-}
-
 .login {
     border:1px solid gray;
     background-color: white;
@@ -14,16 +10,7 @@
     margin-bottom: 200px;
 }
 
-.container {
-    border:1px solid gray;
-    background-color: cyan;
-    border-radius: 6px;
-    width: 400px;
-    margin: 10px;
-    text-align: center;
-    margin-left: 50px;
-}
-.profilestyle {
+.pagestyle {
     border: 1px solid gray;
     background-color: cyan;
     width: 300px;
@@ -82,7 +69,7 @@
 
 .logoutbutton {
     cursor: pointer;
-    margin-top: 350px;
+    margin-top: 370px;
     margin-left: 80px;
 }
 
@@ -97,4 +84,13 @@
 }
 .searchbuttons {
     margin-top: 20px;
+}
+table, th, td {
+   border: 1px solid black;
+}
+.productalign {
+    margin-left: 150px;
+}
+.productbutton {
+    margin-left: 750px;
 }
