--- a/inventry/views/profile.html
+++ b/inventry/views/profile.html
@@ -1,74 +1,59 @@
 <!DOCTYPE html>
 
-<div class = "container" ng-init="userprofilepage()">
+<div class = "pagestyle" ng-init="userprofilepage()">
     <p>{{postivemessage}}</p>
     <p>{{errormessage}}</p>
     <h3>{{profilename}}</h3>
 
-    <form name = "nameForm" >
+    <form name = "ProfileForm" >
         <div>
             <input type = "text"
                    placeholder = "Enter your name"
                    name = "name"
                    class = "formcontroll"
-                   ng-model = "userdetails.name" autofocus disabled required>
-                <p ng-show = "nameForm.name.$error.required &&
-                        nameForm.name.$dirty">Please enter your name</p><br><br>
+                   ng-model = "userdetails.name" autofocus disabled><br><br>
             </div>
-        </form>
 
-    <form name = "usernameForm">
         <div>
             <input type = "text"
                     placeholder = "Enter your user name"
                     class = "formcontroll"
                     name = "username"
-                    ng-model = "userdetails.username" disabled required>
-                <p ng-show = "usernameForm.username.$error.required &&
-                        usernameForm.username.$dirty">
-                        please enter your username</p><br><br>
+                    ng-model = "userdetails.username" disabled><br><br>
                </div>
-           </form>
 
-    <form name = "validemail">
         <div>
             <input type = "email"
                    placeholder="Enter your EmailId"
                    name = "email"
                    class ="formcontroll"
-                   ng-model="userdetails.mailid" disabled required/>
-                   <p ng-show="validemail.email.$error.required
-                   && validemail.email.$dirty">Please enter your email</p>
-                   <p ng-show="!validemail.email.$error.required
-                   && validemail.email.$error.email && validemail.email.$dirty">
-                   Invalid email</p><br><br>
+                   ng-model="userdetails.mailid" disabled><br><br>
                </div>
-           </form>
 
-    <form name = "passwordForm">
         <div>
             <input type = "password"
                    placeholder = "Enter your password"
                    name = "password"
+                   ng-minlength = "8"
+                   ng-maxlength="20"
                    class = "formcontroll"
                    ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/"
                    ng-model = "userdetails.password" required/>
-                   <p ng-show="passwordForm.password.$error.required
-                   && passwordForm.password.$dirty">Please enter your password</p>
-                   <p ng-show = "!passwordForm.password.$error.required &&
-                            (passwordForm.password.$error.minlength ||
-                             passwordForm.password.$error.maxlength)&&
-                             passwordForm.password.$dirty">
+                   <p ng-show="ProfileForm.password.$error.required
+                   && ProfileForm.password.$dirty">Please enter your password</p>
+                   <p ng-show = "!ProfileFormProfileForm$error.required &&
+                            (ProfileForm.password.$error.minlength ||
+                             ProfileForm.password.$error.maxlength)&&
+                             ProfileForm.password.$dirty">
                              password must be between 8 and 20 characters.</p>
-                    <p ng-show = "!passwordForm.password.$error.required &&
-                            !passwordForm.password.$error.minlength &&
-                            !passwordForm.password.$error.maxlength &&
-                            passwordForm.password.$error.pattern &&
-                            passwordForm.password.$dirty">
+                    <p ng-show = "!ProfileForm.password.$error.required &&
+                            !ProfileForm.password.$error.minlength &&
+                            !ProfileForm.password.$error.maxlength &&
+                            ProfileForm.password.$error.pattern &&
+                            ProfileForm.password.$dirty">
                             Must contain one lower &amp; uppercase letter,
                             and one non-alpha character </p><br><br>
                </div>
-           </form>
 
         <div>
             <input type = "date"
@@ -77,17 +62,14 @@
                    ng-model = "userdetails.date" disabled><br><br>
         </div>
 
-    <form name = "addresForm">
         <div>
             <textarea name="add" rows="8" cols="20"
                       placeholder = "Enter your address"
                       name = "address"
                       class = "address"
-                      ng-model = "userdetails.address" disabled required></textarea><br><br>
+                      ng-model = "userdetails.address" disabled></textarea><br><br>
                 </div>
-            </form>
 
-    <form name = "numberForm">
         <div>
             <input type="number"
                    placeholder = "Enter your phonenumber"
@@ -96,14 +78,15 @@
                    ng-minlength = "10"
                    ng-maxlength = "10"
                    ng-model="userdetails.phonenumber" required/>
-                   <p ng-show = "numberForm.numbers.$error.required ||
-                               numberForm.numbers.$error.number"></p>
-                    <p ng-show = "((numberForm.numbers.$error.minlength ||
-                                numberForm.numbers.$error.maxlength) &&
-                                numberForm.numbers.$dirty)">
+                   <p ng-show = "ProfileForm.numbers.$error.required ||
+                               ProfileForm.numbers.$error.number"></p>
+                    <p ng-show = "((ProfileForm.numbers.$error.minlength ||
+                                ProfileForm.numbers.$error.maxlength) &&
+                                ProfileForm.numbers.$dirty)">
                                 Phone number should be 10 digits</p><br><br>
                </div>
-           </form>
-        <button class = "buttons" ng-click = "updatedetials()">Save</button>
+        <button class = "buttons" ng-click = "updatedetials()"
+                        ng-disabled = "ProfileForm.$invalid">Save</button>
         <button class = "buttons" ui-sref="home" >Cancel</button>
+        </form>
     </div>
