--- a/inventry/views/usersignup.html
+++ b/inventry/views/usersignup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<div class = "signupstyle">
+<div class = "style">
     <p>{{postivemessage}}</p>
     <p>{{errormessage}}</p>
     <h2>{{pagename}}</h2>
